# printer-keeper

./: .gitignore  .ignore  .pylintrc  README.md  README.rst  generated.html  ptw.ps1  pyproject.toml  pytest.ini
.github/workflows/: checks.yml  lint.yml
launchd/: install.sh  printer_keeper.plist
printer_keeper/: __main__.py  arithmetics.py  datetime_formatting.py  fortune.py  phrases.txt
printer_keeper/templates/: fortune.html
tests/: test_formatting.py  test_fortune.py  test_printer_keeper.py
tests/__snapshots__/: test_formatting.ambr  test_fortune.ambr
tests/snapshots/: snap_test_fortune.py
