[tool.poetry]
name = "printer-keeper"
version = "0.1.0"
description = ""
authors = ["Konstantin Spirin <Konstantin.Spirin@citadel.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fortune = "^1.1.0"
Jinja2 = "^3.1.2"
tzdata = "^2022.1"
click = "^8.1.3"
playwright = "^1.29.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pylint = "^2.14.5"
snapshottest = "^0.6.0"
pytest-watcher = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
