[project]
name = "printer-keeper"
version = "0.1.0"
description = "Prevent printer ink drying"
authors = ["Konstantin Spirin <konstmsu@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "fortune>=1.1.1",
    "jinja2>=3.1.4",
    "playwright>=1.48.0",
    "tzdata>=2024.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-watcher>=0.4.3",
    "pylint>=3.3.1",
    "ruff>=0.7.1",
    "syrupy>=4.7.2",
]
